fix(styles): change today indicator to inline-flex to fix alignment (#1376)

--- a/styles.css
+++ b/styles.css
@@ -1865,7 +1865,7 @@ body.index-page main {
     color: var(--text-inverse) !important;
     width: 1.6em;
     height: 1.6em;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
